Import of TEX/Sys-RevoBackup-0.24 from CPAN.
gitpan-cpan-distribution: Sys-RevoBackup
gitpan-cpan-version:      0.24
gitpan-cpan-path:         TEX/Sys-RevoBackup-0.24.tar.gz
gitpan-cpan-author:       TEX
gitpan-cpan-maturity:     released

--- a/README
+++ b/README
@@ -11,7 +11,7 @@ METHODS
 CONFIGURATION
     Place the configuration inside /etc/revobackup/revobackup.conf
 
-        <VTK>
+        <Sys>
             <RevoBackup>
                 bank = /srv/backup/bank
                 <Rotations>
@@ -33,7 +33,7 @@ CONFIGURATION
                         </anotherhost>
                 </Vaults>
             </RevoBackup>
-        </VTK>
+        </Sys>
 
 NAME
     Sys::RevoBackup - Rsync based backup script
