--- a/Changes
+++ b/Changes
@@ -1,4 +1,13 @@
 Revision history for Sys-RevoBackup
 
+0.24    2013-10-04
+        Add single job execution option
+
+0.23    2013-03-12
+        Add ExecDir plugin
+
+0.22    2013-03-12
+        Cleanup dependencies
+
 0.16    2012-12-02
         First public version, released on an unsuspecting world.
