Import of TEX/Sys-RevoBackup-0.25 from CPAN.
gitpan-cpan-distribution: Sys-RevoBackup
gitpan-cpan-version:      0.25
gitpan-cpan-path:         TEX/Sys-RevoBackup-0.25.tar.gz
gitpan-cpan-author:       TEX
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Revision history for Sys-RevoBackup
 
+0.25    2013-10-18
+        Only rotate on success.
+
 0.24    2013-10-04
         Add single job execution option
 
