--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Revision history for Sys-RevoBackup
 
+0.27    2014-04-22
+        Disable strict host key checking.
+
 0.26    2014-04-16
         Fix handling of uninitialized parameters in _init.
         Add sudo option.
